<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_mid"
    tools:context=".ActivityChoosePuzzle">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPuzzles"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svFind" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_dark"
        android:fontFamily="monospace"
        android:text="@string/create"
        android:textColor="@color/purple_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rvPuzzles" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_dark"
        android:fontFamily="monospace"
        android:text="@string/random"
        android:textColor="@color/purple_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rvPuzzles" />

    <TextView
        android:id="@+id/lblChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Choose any sudoku"
        android:textColor="@color/purple_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/rvPuzzles"
        app:layout_constraintTop_toTopOf="@id/btnSort" />

    <TextView
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_filter"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/btnSort"
        app:layout_constraintTop_toTopOf="@id/btnSort" />

    <TextView
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_sort"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/rvPuzzles"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuFilter"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_dark"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnFilter"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter">

        <CheckBox
            android:id="@+id/chkCompleted"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/completed"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkStarted"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/started"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkUnsolved"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/unsolved"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkUnknown1to10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_1_10_unknowns"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkUnknown11to30"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_11_30_unknowns"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkUnknown31to50"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_31_50_unknowns"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkUnknown51to81"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_51_81_unknowns"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkDone1to25"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_1_25_done"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkDone26to50"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_26_50_done"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkDone51to75"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_51_75_done"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkDone76to99"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/_76_99_done"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkSelfMade"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/self_made"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkGenerated"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/purple_light"
            android:checked="true"
            android:text="@string/generated"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuSort"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_dark"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnSort"
        app:layout_constraintTop_toBottomOf="@+id/btnSort">

        <TextView
            android:id="@+id/sortNameAsc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/name_a_z"
            android:textColor="@color/purple_mid"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sortNameDesc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/name_z_a"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sortDoneDesc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/done_desc"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sortDoneAsc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/done_asc"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sortUnknownDesc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/unknowns_desc"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sortUnknownAsc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/unknowns_asc"
            android:textColor="@color/purple_light"
            android:textSize="12sp" />

    </LinearLayout>

    <SearchView
        android:id="@+id/svFind"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:searchHintIcon="@drawable/ic_search"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSort" />

</androidx.constraintlayout.widget.ConstraintLayout>